yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-and-morty-api
spec:
  selector:
    app: rick-and-morty-api
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30080
