yamls/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-and-morty-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: rick-and-morty.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rick-and-morty-api
                port:
                  number: 80
